--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "scalar/v1",
+      "launchUrl": "/scalar/v1",
       "applicationUrl": "https://localhost:7250",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
